Added Healthchecks. Fixed minor bugs
